Fixed z-index of menu

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,7 @@ main#game{
 	align-items: center;
 	justify-content: center;
 	overflow: hidden;
+	z-index: 0;
 }
 #game>h1{
 	color: White;
@@ -70,7 +71,7 @@ div#status{
 	align-items: center;
 	justify-content: center;
 	flex-wrap: wrap;
-	z-index: 10;
+	z-index: 1;
 }
 p#statusMain{	
 	transition: margin-top 0.25s;
@@ -117,7 +118,7 @@ section#menu{
 	position: fixed;
 	right: 0;
 	top: 0;
-	z-index: 10;
+	z-index: 100;
 	background-color: none;
 	width: 0;
 	transition: 0.25s width, 0.25s background-color;
@@ -207,7 +208,7 @@ div#hold-indicator{
 	border-radius: 50%;
 	touch-action: none;
 	pointer-events: none;
-	z-index: 100;
+	z-index: 50;
 }
 div#hold-indicator.active{
 	width: 7rem;
